# qt5-docker

./: .gitignore  Dockerfile  README.md  docker-compose.test.yml
hooks/: build  pre_build  push  tags  test
test/: README.md
test/executable/: CMakeLists.txt  build.sh  clean.sh  main.cpp
test/executable/test/: CMakeLists.txt  cmake-definitions.h  cmake-definitions.h.in  hello-test.cpp
